# vabl-multi-agent-coordination

./: .gitignore  CLAUDE.md  PAPER_CLAIMS_UPDATE.md  README.md  example_paper.bib  findings.md  my_paper.tex  paper_implementation_details.md  paper_supplementary_material.md  paper_update.md  rebuttal_draft.md  rebuttal_final.md  rebuttal_openreview.md  run_full_comparison.py  run_stronger_ablations.py  submission_improvements.md
marl_research/: .gitignore  README.md  __init__.py  pyproject.toml  test_imports.py
marl_research/algorithms/: __init__.py  aerial.py  base.py  commnet.py  ippo.py  mappo.py  maven.py  networks.py  qmix.py  qplex.py  registry.py  tarmac.py  vabl.py  vabl_networks.py
marl_research/configs/: default.yaml
marl_research/environments/: __init__.py  base.py  hanabi_env.py  mpe_env.py  overcooked_ego_env.py  overcooked_env.py  overcooked_jax_env.py  registry.py  simple_env.py  simple_jax_env.py  smac_env.py
marl_research/experiments/: __init__.py
marl_research/runners/: __init__.py  evaluate.py  train.py
marl_research/scripts/: __init__.py  compare_results.py  compute_paper_metrics.py  debug_overcooked.py  plot_collapse_analysis.py  plot_comparison_updated.py  plot_publication_figure.py  plot_results.py  plot_sample_efficiency.py  plot_smac.py  reproduce_paper.sh  run_ablation_study.py  run_ablation_sweep.py  run_all_experiments.sh  run_long_comparison.py  run_mechanism_ablations.py  run_overcooked.sh  run_quick_test.py  run_smac.sh  run_smac_v2.sh  run_vabl_experiments.py  setup_smac.py  test_setup.py
marl_research/utils/: __init__.py  (+4 more)
(+139 files in other folders)
